# auth-fast-api

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 5aef2972a332_use_timestamped_base_model.py  785f41389266_initial.py
app/: main.py
app/apis/: __init__.py
app/apis/routes/: __init__.py  auth.py  users.py
app/db/: session.py
app/db/models/: base.py  users.py
app/serializers/: __init__.py  users.py
